removed z-index causing issues with hover over menu buttons

--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ abbr,acronym { border:0;
     position: relative;
     justify-content: center;
     align-items: center;
-    z-index: -1;
+   
 }
 
   .menu-wrapper img{
@@ -272,6 +272,10 @@ abbr,acronym { border:0;
     background-color: rgb(227, 11, 4);
     transform: skew(-21deg);
   }
+
+  .menu-img-overlay button:hover {
+    background-color: pink;
+  }
   #menu-btn {
     margin-bottom: 1em;
     /* flex-wrap: wrap; */
@@ -280,6 +284,8 @@ abbr,acronym { border:0;
     justify-content: center;
     /* margin-right: .8em; */
 }
+
+
 
 #menu-btn button {
   border: .2em solid white;
